# randy

./: .env.example  .gitignore  Cargo.toml  LATEST.md  go.work  go.work.sum  update-all.sh
.github/workflows/: deploy-requester.yml  deploy-worker.yml
bot-gateway/: Cargo.toml
bot-gateway/src/: context.rs  main.rs  signals.rs
bot-gateway/src/cache/: channel.rs  current_user.rs  guild.rs  member.rs  message.rs  mod.rs  presence.rs  role.rs  stickers.rs  user.rs
bot-requester/: .env  .envrc  Dockerfile  LICENCE  Makefile  README.md  ROUTES.md  cloudbuild.yaml  flake.nix  go.mod  go.sum  handler.go  main.go  routes.go  scri.sh
bot-requester/src/: main.go  routes.go
bot-worker/: .eslintrc.json  .gitignore  README.md  flake.nix  function.go  go.mod  go.sum  helpers.go  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  wrangler.toml
bot-worker/cmd/: main.go
bot-worker/features/: slash_commands.go  weather_command.go
bot-worker/handler/: handler.go
bot-worker/http/: client.go
bot-worker/src/: index.ts  register.ts  register_cmds.ts  response.ts
bot-worker/src/commands/: README.md  index.ts  ping.ts
bot-worker/src/utils/: crypto.ts  snowflake.ts
randy-interactions/vesper/: Cargo.toml
randy-interactions/vesper/src/: group.rs  parse_impl.rs  parsers.rs
vesper/src/: command.rs  lib.rs
