[workspace]
resolver = "2"
members = [
    # core-deps
    "randy-storage",
    "randy-rest",
    "randy-model",
    "randy-gateway",
    "randy-tools",
    "randy-validate",
    "randy-ratelimiting"
]

[workspace.package]
name = "randy"
description = "randombot's second coming"
authors = ["swrge", "Twilight Contributors"]
edition = "2021"
rust-version = "1.84.0"
license = "ISC"
