[package]
name = "bot-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
bb8-redis = "0.13.1"
rkyv = "0.8.8"
randy-tools = { path = "../randy-tools" }
randy-rest = { path = "../randy-rest" }
randy-gateway = { path = "../randy-gateway" }
randy-model = { path = "../randy-model" }
redlight = { path = "../redlight", features = ["cold_resume"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0" # Ensure this is present
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
futures-util = "0.3.31"
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json"] }
