[package]
name = "bot-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
bb8-redis = "0.13.1"
rkyv = "0.8.8"
randy-tools = { path = "../vendor/randy-tools" }
randy-rest = { path = "../vendor/randy-rest" }
randy-gateway = { path = "../vendor/randy-gateway" }
randy-model = { path = "../vendor/randy-model" }
redlight = { path = "../vendor/redlight", features = ["cold_resume"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"                                                     # Ensure this is present
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
futures-util = "0.3.31"
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json"] }
